--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-vector-icons": "6.6.0",
     "@react-native-community/masked-view": "^0.1.1",
     "@react-native-community/audio-toolkit": "2.0.2",
-    "react-navigation-material-bottom-tabs": "2.1.5"
+    "react-navigation-material-bottom-tabs": "2.1.5",
+    "mem": ">=4.0.0"
   }
 }
